# EmotionDetection

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Implementation.md  Main.ipynb  README.md  READMEDocker.md  docker-compose.yaml  inference.ipynb  main.py  pyproject.toml  requirements.txt  visualize.py
.github/: CODEOWNERS  release-drafter.yml
.github/actions/generate-image-tag/: action.yaml
.github/workflows/: pre-commit-config.yaml  release-drafter.yaml  release.yaml  test.yaml
emotion_predictor/.ipynb_checkpoints/: FacialExpression-checkpoint.ipynb
emotion_predictor/models/: vgg.py
fer-formatter/: code.py
models/: resnet.py  vgg.py
training/: README.md
training/fer-formatter/: code.py
transforms/: functional.py  transforms.py
yolo_predictor/: PublicTest_model.t7  custom.names  yolov3_custom_9700.weights
yolo_predictor/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  YOLO_Detector-checkpoint.ipynb
yolo_predictor/cfg/: yolov3-custom.cfg
